Krijimi i API te reja per crudat ne vijim

--- a/frontend/src/Cruds/StaffCrud/StaffCrud.css
+++ b/frontend/src/Cruds/StaffCrud/StaffCrud.css
@@ -54,3 +54,9 @@
     background-color: rgb(0, 234, 242);
     color: black;
 }
+.addbutton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+}
